<resources>
    <string name="app_name">ProFoto</string>

    <string name="login_vardas">Prisijungimo vardas</string>
    <string name="login_vardasPris">Prisijungimo vardas</string>
    <string name="login_slaptazodis">Slaptažodis</string>
    <string name="login_slaptazodisRegi">Slaptazodis</string>
    <string name="login_elPastas">El.Pastas</string>
    <string name="login_slaptazodisPak">Pakartoti Slaptazodi</string>
    <string name="buton_login">Prisijungti</string>
    <string name="buton_register">Registruotis</string>
    <string name="buton_siusti">Sukurti</string>


    <string name="entryName">Name</string>
    <string name="entryWeight">Weight</string>
    <string name="entryCp">CP</string>
    <string name="entryCpStrong">Strong</string>
    <string name="entryCpMedium">Medium</string>
    <string name="entryCpWeak">Weak</string>
    <string name="entryAbilities">Abilities</string>
    <string name="entryAbilitiesUltimate">Ultimate</string>
    <string name="entryAbilitiesFighting">Fighting</string>
    <string name="entryAbilitiesRange">Range</string>

    <string name="entryType">Type</string>
    <string name="entryTypeWater">Water</string>
    <string name="entryTypeFire">Fire</string>
    <string name="entryTypeWind">Wind</string>
    <string name="entryTypeEarth">Earth</string>
    <string name="entryTypeElectric">Electric</string>

    <string name="entrySubmit">ADD</string>
    <string name="entrySubmitKu">sukurti</string>
    <string name="entryNameError">Name was incorrect!</string>

    <string name="entryCheckAbilities">You must select at least one ability!</string>
    <string name="buton_nameInput">vardas</string>
    <string name="buton_weightInput">ugis</string>


    <string name="entryNameErorr">Name was incorect!</string>
    <string name="entryWeightError">Weight was incorrect!</string>
    <string name="butonCheckAbilities">You must select at least one ability!</string>
    <string name="entryDatabaseInfo">Please wait, sending to DB.</string>


</resources>



