<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    android:orientation="vertical"
    android:padding="10dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="Naujo vartotojo registracija"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="25dp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/vardasPri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_vardasPris"
        android:textSize="25dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/slaptaPri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_slaptazodisRegi"
        android:inputType="textPassword"
        android:textSize="25dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/slaptPaka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_slaptazodisPak"
        android:inputType="textPassword"
        android:textSize="25dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/pastasPri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_elPastas"
        android:textSize="25dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />


    <Button
        android:id="@+id/loginKurt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"
        android:textSize="20dp"
        android:background="@color/colorBlack"
        android:text="@string/buton_siusti"
        android:textColor="@color/colorRed" />



</LinearLayout>