<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="ProFoto"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="39dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:src="@drawable/logotipas" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/vardasEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_vardas"
        android:textSize="25dp" />


    <EditText
        android:id="@+id/slaptazodisEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_slaptazodis"
        android:inputType="textPassword"
        android:textSize="25dp" />


    <CheckBox
        android:id="@+id/text_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Remembe me"
        android:textSize="18dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@color/colorBlack"
            android:text="@string/buton_login"
            android:textColor="@color/colorRed" />


        <Button
            android:id="@+id/registerBtn"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/colorBlack"
            android:text="@string/buton_register"
            android:textColor="@color/colorRed" />

    </RelativeLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />







</LinearLayout >